# TacticsEngine

./: .gitignore  CMakeLists.txt  Entity.cpp  Entity.hpp  Grid.cpp  Grid.hpp  Makefile  README.md  Tile.cpp  Tile.hpp  abilities.cpp  abilities.hpp  camera.cpp  camera.hpp  compile_commands.json  config.hpp  cover.cpp  cover.hpp  grid.cpp  grid.hpp  input.cpp  input.hpp  main.cpp  movement.cpp  tactical_unit.hpp  todo.md  turns.cpp  turns.hpp  utils.cpp  utils.hpp
src/: abilities.cpp  abilities.hpp  camera.cpp  camera.hpp  cover.cpp  cover.hpp  enemy_unit.cpp  enemy_unit.hpp  grid.cpp  grid.hpp  input.cpp  los.cpp  los.hpp  main.cpp  movement.cpp  movement.hpp  player_unit.cpp  player_unit.hpp  strategy_unit.hpp  turns.cpp  turns.hpp
